[gd_scene load_steps=37 format=3 uid="uid://dyx2uc3tcrmn4"]

[ext_resource type="Script" path="res://scripts/areas/world.gd" id="1_yrr7o"]
[ext_resource type="PackedScene" uid="uid://cuvfk6l06ytm2" path="res://scenes/NPCs/npc_hunter.tscn" id="3_hj2pf"]
[ext_resource type="TileSet" uid="uid://dps0u5bt40qry" path="res://assets/tilesets/default_ground.tres" id="4_xrski"]
[ext_resource type="PackedScene" uid="uid://cp3ux2qv3qq7e" path="res://scenes/backgrounds/normal_world_background.tscn" id="5_87ja3"]
[ext_resource type="PackedScene" uid="uid://ccxfk82g8wye1" path="res://scenes/player/Player.tscn" id="5_jaceo"]
[ext_resource type="PackedScene" uid="uid://or5j0ao207xe" path="res://scenes/enemies/Goblin.tscn" id="5_l6xbp"]
[ext_resource type="TileSet" uid="uid://bpfdwdtnqcw4i" path="res://assets/tilesets/death_ground.tres" id="6_5lpkg"]
[ext_resource type="PackedScene" uid="uid://dwc52qx3v2h3h" path="res://scenes/enemies/Frog.tscn" id="6_n5khx"]
[ext_resource type="Shader" path="res://Shaders/SunRays.gdshader" id="6_tihlm"]
[ext_resource type="Script" path="res://scripts/UI/HealthBar.gd" id="6_u0wo8"]
[ext_resource type="Texture2D" uid="uid://d0f4pnyc78ve0" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarOver.png" id="7_2tid5"]
[ext_resource type="Script" path="res://scripts/areas/SunRays.gd" id="7_atl4a"]
[ext_resource type="PackedScene" uid="uid://b8ouces3cngpi" path="res://scenes/backgrounds/death_world_background.tscn" id="7_ts7l6"]
[ext_resource type="Texture2D" uid="uid://dxkoas3gsequ5" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarBackground.png" id="7_wofer"]
[ext_resource type="Texture2D" uid="uid://bpp43rcycbo2f" path="res://Health Bar Asset Pack 2 by Adwit Rahman/HealthBarProgress.png" id="8_hd7s3"]
[ext_resource type="Texture2D" uid="uid://dmt2k0glhayib" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarBackground.png" id="10_njy5m"]
[ext_resource type="Texture2D" uid="uid://bsoabmxwhp1g1" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarOver.png" id="11_u4uyq"]
[ext_resource type="Texture2D" uid="uid://crph5w7ae5suv" path="res://Health Bar Asset Pack 2 by Adwit Rahman/CourageBarProgress.png" id="12_iphf5"]
[ext_resource type="Script" path="res://scripts/UI/CourageBar.gd" id="13_mlp2c"]
[ext_resource type="Shader" path="res://Shaders/visuals.gdshader" id="13_vyhij"]
[ext_resource type="Script" path="res://scripts/Effects/Filter.gd" id="14_nbkpm"]
[ext_resource type="Shader" path="res://Shaders/vignette.gdshader" id="16_qo4s6"]
[ext_resource type="Script" path="res://scripts/Effects/Vignette.gd" id="17_vdpjq"]
[ext_resource type="Shader" path="res://Shaders/DeathWorld.gdshader" id="19_osw28"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tvim8"]
shader = ExtResource("6_tihlm")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 0.368
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 0.1
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.901961, 0.65098, 0.498039)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="Gradient" id="Gradient_7ojvx"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6k7ww"]
gradient = SubResource("Gradient_7ojvx")
width = 1152
height = 648
repeat = 1

[sub_resource type="GDScript" id="GDScript_e70ww"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"HP: \" + str(Game.playerHP)
"

[sub_resource type="GDScript" id="GDScript_ciooa"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Courage: \" + str(Game.courage)
"

[sub_resource type="GDScript" id="GDScript_wl81y"]
script/source = "extends Node2D

var Cherry = preload(\"res://Collectables/cherry.tscn\")



func _on_timer_timeout():
	var cherryTemp = Cherry.instantiate()
	var rng = RandomNumberGenerator.new()
	var ranint = rng.randi_range(50, 500)
	cherryTemp.position = Vector2(ranint, 355)
	add_child(cherryTemp)
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tan7j"]
shader = ExtResource("13_vyhij")
shader_parameter/brightness = 4.75e-08
shader_parameter/contrast = 1.0
shader_parameter/saturation = 0.775
shader_parameter/redVal = 1.0
shader_parameter/greenVal = 1.0
shader_parameter/blueVal = 1.0
shader_parameter/tint_color = Vector4(255, 255, 255, 1)
shader_parameter/tint_effect_factor = 0.0
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Vector4(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x6gj1"]
shader = ExtResource("16_qo4s6")
shader_parameter/vignette_intensity = 0.5
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Vector4(255, 32, 32, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xti46"]
shader = ExtResource("19_osw28")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 0.2
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wipb"]
shader = ExtResource("19_osw28")
shader_parameter/angle = -0.3
shader_parameter/position = -0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.1
shader_parameter/falloff = 0.2
shader_parameter/edge_fade = 0.15
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(1, 0.9, 0.65, 0.8)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="Gradient" id="Gradient_yot7o"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8hhqn"]
gradient = SubResource("Gradient_yot7o")
width = 1152
height = 648

[node name="World" type="Node2D"]
script = ExtResource("1_yrr7o")

[node name="Player" type="Node2D" parent="."]

[node name="Player" parent="Player" instance=ExtResource("5_jaceo")]
position = Vector2(373, 152)

[node name="NPCs" type="Node2D" parent="."]

[node name="NPC_Hunter" parent="NPCs" instance=ExtResource("3_hj2pf")]
position = Vector2(80, 221)

[node name="Mobs" type="Node2D" parent="."]

[node name="Frog" parent="Mobs" instance=ExtResource("6_n5khx")]
position = Vector2(694, 170)

[node name="Frog2" parent="Mobs" instance=ExtResource("6_n5khx")]
position = Vector2(998, 151)

[node name="Frog3" parent="Mobs" instance=ExtResource("6_n5khx")]
position = Vector2(836, 72)

[node name="Frog4" parent="Mobs" instance=ExtResource("6_n5khx")]
position = Vector2(963, 53)

[node name="Frog5" parent="Mobs" instance=ExtResource("6_n5khx")]
position = Vector2(918, -22)

[node name="Goblin" parent="Mobs" instance=ExtResource("5_l6xbp")]
position = Vector2(584, 214)

[node name="Sun Rays" type="Node2D" parent="."]

[node name="Sun Rays" type="Sprite2D" parent="Sun Rays"]
material = SubResource("ShaderMaterial_tvim8")
position = Vector2(528, 56)
texture = SubResource("GradientTexture2D_6k7ww")
script = ExtResource("7_atl4a")

[node name="NormalWorld" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="NormalWorld"]
tile_set = ExtResource("4_xrski")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 131072, 0, 655383, 131072, 0, 655407, 131072, 0, 655363, 131072, 0, 655364, 131072, 0, 655365, 131072, 0, 655366, 131072, 0, 655367, 131072, 0, 655368, 131072, 0, 655369, 131072, 0, 655370, 131072, 0, 655371, 131072, 0, 655372, 131072, 0, 655373, 131072, 0, 655374, 131072, 0, 655375, 131072, 0, 655376, 131072, 0, 655377, 131072, 0, 655378, 131072, 0, 655379, 131072, 0, 655380, 131072, 0, 655381, 131072, 0, 655382, 131072, 0, 655384, 131072, 0, 655385, 131072, 0, 655386, 131072, 0, 655387, 131072, 0, 655388, 327680, 13, 655389, 65536, 1, 655390, 65536, 1, 655391, 393216, 13, 655392, 131072, 0, 655393, 131072, 0, 655394, 131072, 0, 655395, 131072, 0, 655396, 131072, 0, 655397, 131072, 0, 655398, 131072, 0, 655399, 131072, 0, 655400, 131072, 0, 655401, 131072, 0, 655402, 131072, 0, 655403, 131072, 0, 655404, 131072, 0, 655405, 131072, 0, 655406, 131072, 0, 655361, 131072, 0, 655362, 131072, 0, 655359, 196608, 2, 65535, 196608, 2, 131071, 196608, 2, 196607, 196608, 2, 262143, 196608, 2, 327679, 196608, 2, 393215, 196608, 2, 458751, 196608, 2, 524287, 196608, 2, 589823, 196608, 2, 48, 0, 2, 65584, 0, 2, 131120, 0, 2, 196656, 0, 2, 262192, 0, 2, 327728, 0, 2, 393264, 0, 2, 458800, 0, 2, 524336, 0, 2, 589872, 0, 2, 720940, 65536, 1, 786476, 65536, 1, 852012, 65536, 1, 917548, 65536, 1, 720941, 65536, 1, 786477, 65536, 1, 852013, 65536, 1, 917549, 65536, 1, 720942, 65536, 1, 786478, 65536, 1, 852014, 65536, 1, 917550, 65536, 1, 720943, 65536, 1, 786479, 65536, 1, 852015, 65536, 1, 917551, 65536, 1, 720895, 393216, 13, 655408, 327680, 13, 65534, 65536, 1, 131070, 65536, 1, 196606, 65536, 1, 262142, 65536, 1, 327678, 65536, 1, 393214, 65536, 1, 458750, 65536, 1, 524286, 65536, 1, 589822, 65536, 1, 655358, 65536, 1, 720894, 65536, 1, 49, 65536, 1, 65585, 65536, 1, 131121, 65536, 1, 196657, 65536, 1, 262193, 65536, 1, 327729, 65536, 1, 393265, 65536, 1, 458801, 65536, 1, 524337, 65536, 1, 589873, 65536, 1, 655409, 65536, 1, 720945, 65536, 1, 786481, 65536, 1, 852017, 65536, 1, 917553, 65536, 1, 720944, 65536, 1, 786480, 65536, 1, 852016, 65536, 1, 917552, 65536, 1, 458769, 327680, 3, 458770, 458752, 3, 524316, 0, 0, 524317, 65536, 0, 524318, 65536, 0, 524319, 196608, 0, 589852, 0, 1, 589855, 196608, 2, 589853, 65536, 1, 589854, 65536, 1, 786430, 65536, 1, 851966, 65536, 1, 917502, 65536, 1, 983038, 65536, 1, 786431, 65536, 1, 851967, 65536, 1, 917503, 65536, 1, 983039, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1, 720897, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 917505, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 917506, 65536, 1, 720899, 65536, 1, 786435, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 720900, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 917508, 65536, 1, 720901, 65536, 1, 786437, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 720902, 65536, 1, 786438, 65536, 1, 851974, 65536, 1, 917510, 65536, 1, 720903, 65536, 1, 786439, 65536, 1, 851975, 65536, 1, 917511, 65536, 1, 720904, 65536, 1, 786440, 65536, 1, 851976, 65536, 1, 917512, 65536, 1, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 917513, 65536, 1, 720906, 65536, 1, 786442, 65536, 1, 851978, 65536, 1, 917514, 65536, 1, 720907, 65536, 1, 786443, 65536, 1, 851979, 65536, 1, 917515, 65536, 1, 720908, 65536, 1, 786444, 65536, 1, 851980, 65536, 1, 917516, 65536, 1, 720909, 65536, 1, 786445, 65536, 1, 851981, 65536, 1, 917517, 65536, 1, 720910, 65536, 1, 786446, 65536, 1, 851982, 65536, 1, 917518, 65536, 1, 720911, 65536, 1, 786447, 65536, 1, 851983, 65536, 1, 917519, 65536, 1, 720912, 65536, 1, 786448, 65536, 1, 851984, 65536, 1, 917520, 65536, 1, 720913, 65536, 1, 786449, 65536, 1, 851985, 65536, 1, 917521, 65536, 1, 720914, 65536, 1, 786450, 65536, 1, 851986, 65536, 1, 917522, 65536, 1, 720915, 65536, 1, 786451, 65536, 1, 851987, 65536, 1, 917523, 65536, 1, 720916, 65536, 1, 786452, 65536, 1, 851988, 65536, 1, 917524, 65536, 1, 720917, 65536, 1, 786453, 65536, 1, 851989, 65536, 1, 917525, 65536, 1, 720918, 65536, 1, 786454, 65536, 1, 851990, 65536, 1, 917526, 65536, 1, 720919, 65536, 1, 786455, 65536, 1, 851991, 65536, 1, 917527, 65536, 1, 720920, 65536, 1, 786456, 65536, 1, 851992, 65536, 1, 917528, 65536, 1, 720921, 65536, 1, 786457, 65536, 1, 851993, 65536, 1, 917529, 65536, 1, 720922, 65536, 1, 786458, 65536, 1, 851994, 65536, 1, 917530, 65536, 1, 720923, 65536, 1, 786459, 65536, 1, 851995, 65536, 1, 917531, 65536, 1, 720924, 65536, 1, 786460, 65536, 1, 851996, 65536, 1, 917532, 65536, 1, 720925, 65536, 1, 786461, 65536, 1, 851997, 65536, 1, 917533, 65536, 1, 720926, 65536, 1, 786462, 65536, 1, 851998, 65536, 1, 917534, 65536, 1, 720927, 65536, 1, 786463, 65536, 1, 851999, 65536, 1, 917535, 65536, 1, 720928, 65536, 1, 786464, 65536, 1, 852000, 65536, 1, 917536, 65536, 1, 720929, 65536, 1, 786465, 65536, 1, 852001, 65536, 1, 917537, 65536, 1, 720930, 65536, 1, 786466, 65536, 1, 852002, 65536, 1, 917538, 65536, 1, 720931, 65536, 1, 786467, 65536, 1, 852003, 65536, 1, 917539, 65536, 1, 720932, 65536, 1, 786468, 65536, 1, 852004, 65536, 1, 917540, 65536, 1, 720933, 65536, 1, 786469, 65536, 1, 852005, 65536, 1, 917541, 65536, 1, 720934, 65536, 1, 786470, 65536, 1, 852006, 65536, 1, 917542, 65536, 1, 720935, 65536, 1, 786471, 65536, 1, 852007, 65536, 1, 917543, 65536, 1, 720936, 65536, 1, 786472, 65536, 1, 852008, 65536, 1, 917544, 65536, 1, 720937, 65536, 1, 786473, 65536, 1, 852009, 65536, 1, 917545, 65536, 1, 720938, 65536, 1, 786474, 65536, 1, 852010, 65536, 1, 917546, 65536, 1, 720939, 65536, 1, 786475, 65536, 1, 852011, 65536, 1, 917547, 65536, 1)

[node name="ParallaxBackground" parent="NormalWorld" instance=ExtResource("5_87ja3")]
offset = Vector2(432, 0)
transform = Transform2D(1, 0, 0, 1, 432, 0)

[node name="DeathWorld" type="Node2D" parent="."]
visible = false

[node name="TileMap" type="TileMap" parent="DeathWorld"]
tile_set = ExtResource("6_5lpkg")
format = 2
layer_0/tile_data = PackedInt32Array(655360, 131073, 0, 655383, 65537, 0, 655407, 131073, 0, 655363, 65537, 0, 655364, 65537, 0, 655365, 65537, 0, 655366, 65537, 0, 655367, 65537, 0, 655368, 65537, 0, 655369, 65537, 0, 655370, 65537, 0, 655371, 65537, 0, 655372, 65537, 0, 655373, 65537, 0, 655374, 65537, 0, 655375, 65537, 0, 655376, 65537, 0, 655377, 65537, 0, 655378, 65537, 0, 655379, 65537, 0, 655380, 65537, 0, 655381, 65537, 0, 655382, 65537, 0, 655384, 65537, 0, 655385, 65537, 0, 655386, 65537, 0, 655387, 65537, 0, 655388, 65537, 0, 655389, 65537, 0, 655390, 65537, 0, 655391, 65537, 0, 655392, 65537, 0, 655393, 65537, 0, 655394, 65537, 0, 655395, 65537, 0, 655396, 65537, 0, 655397, 65537, 0, 655398, 65537, 0, 655399, 65537, 0, 655400, 65537, 0, 655401, 65537, 0, 655402, 65537, 0, 655403, 65537, 0, 655404, 65537, 0, 655405, 65537, 0, 655406, 65537, 0, 655361, 65537, 0, 655362, 65537, 0, 655359, 196609, 2, 65535, 196609, 2, 131071, 196609, 2, 196607, 196609, 2, 262143, 196609, 2, 327679, 196609, 2, 393215, 196609, 2, 458751, 196609, 2, 524287, 196609, 2, 589823, 196609, 2, 48, 1, 2, 65584, 1, 2, 131120, 1, 2, 196656, 1, 2, 262192, 1, 2, 327728, 1, 2, 393264, 1, 2, 458800, 1, 2, 524336, 1, 2, 589872, 1, 2, 720897, 65537, 1, 786433, 65537, 1, 851969, 65537, 1, 917505, 65537, 1, 720898, 65537, 1, 786434, 65537, 1, 851970, 65537, 1, 917506, 65537, 1, 720899, 65537, 1, 786435, 65537, 1, 851971, 65537, 1, 917507, 65537, 1, 720900, 65537, 1, 786436, 65537, 1, 851972, 65537, 1, 917508, 65537, 1, 720901, 65537, 1, 786437, 65537, 1, 851973, 65537, 1, 917509, 65537, 1, 720902, 65537, 1, 786438, 65537, 1, 851974, 65537, 1, 917510, 65537, 1, 720903, 65537, 1, 786439, 65537, 1, 851975, 65537, 1, 917511, 65537, 1, 720904, 65537, 1, 786440, 65537, 1, 851976, 65537, 1, 917512, 65537, 1, 720905, 65537, 1, 786441, 65537, 1, 851977, 65537, 1, 917513, 65537, 1, 720906, 65537, 1, 786442, 65537, 1, 851978, 65537, 1, 917514, 65537, 1, 720907, 65537, 1, 786443, 65537, 1, 851979, 65537, 1, 917515, 65537, 1, 720908, 65537, 1, 786444, 65537, 1, 851980, 65537, 1, 917516, 65537, 1, 720909, 65537, 1, 786445, 65537, 1, 851981, 65537, 1, 917517, 65537, 1, 720910, 65537, 1, 786446, 65537, 1, 851982, 65537, 1, 917518, 65537, 1, 720911, 65537, 1, 786447, 65537, 1, 851983, 65537, 1, 917519, 65537, 1, 720912, 65537, 1, 786448, 65537, 1, 851984, 65537, 1, 917520, 65537, 1, 720913, 65537, 1, 786449, 65537, 1, 851985, 65537, 1, 917521, 65537, 1, 720914, 65537, 1, 786450, 65537, 1, 851986, 65537, 1, 917522, 65537, 1, 720915, 65537, 1, 786451, 65537, 1, 851987, 65537, 1, 917523, 65537, 1, 720916, 65537, 1, 786452, 65537, 1, 851988, 65537, 1, 917524, 65537, 1, 720917, 65537, 1, 786453, 65537, 1, 851989, 65537, 1, 917525, 65537, 1, 720918, 65537, 1, 786454, 65537, 1, 851990, 65537, 1, 917526, 65537, 1, 720919, 65537, 1, 786455, 65537, 1, 851991, 65537, 1, 917527, 65537, 1, 720920, 65537, 1, 786456, 65537, 1, 851992, 65537, 1, 917528, 65537, 1, 720921, 65537, 1, 786457, 65537, 1, 851993, 65537, 1, 917529, 65537, 1, 720922, 65537, 1, 786458, 65537, 1, 851994, 65537, 1, 917530, 65537, 1, 720923, 65537, 1, 786459, 65537, 1, 851995, 65537, 1, 917531, 65537, 1, 720924, 65537, 1, 786460, 65537, 1, 851996, 65537, 1, 917532, 65537, 1, 720925, 65537, 1, 786461, 65537, 1, 851997, 65537, 1, 917533, 65537, 1, 720926, 65537, 1, 786462, 65537, 1, 851998, 65537, 1, 917534, 65537, 1, 720927, 65537, 1, 786463, 65537, 1, 851999, 65537, 1, 917535, 65537, 1, 720928, 65537, 1, 786464, 65537, 1, 852000, 65537, 1, 917536, 65537, 1, 720929, 65537, 1, 786465, 65537, 1, 852001, 65537, 1, 917537, 65537, 1, 720930, 65537, 1, 786466, 65537, 1, 852002, 65537, 1, 917538, 65537, 1, 720931, 65537, 1, 786467, 65537, 1, 852003, 65537, 1, 917539, 65537, 1, 720932, 65537, 1, 786468, 65537, 1, 852004, 65537, 1, 917540, 65537, 1, 720933, 65537, 1, 786469, 65537, 1, 852005, 65537, 1, 917541, 65537, 1, 720934, 65537, 1, 786470, 65537, 1, 852006, 65537, 1, 917542, 65537, 1, 720935, 65537, 1, 786471, 65537, 1, 852007, 65537, 1, 917543, 65537, 1, 720936, 65537, 1, 786472, 65537, 1, 852008, 65537, 1, 917544, 65537, 1, 720937, 65537, 1, 786473, 65537, 1, 852009, 65537, 1, 917545, 65537, 1, 720938, 65537, 1, 786474, 65537, 1, 852010, 65537, 1, 917546, 65537, 1, 720939, 65537, 1, 786475, 65537, 1, 852011, 65537, 1, 917547, 65537, 1, 720940, 65537, 1, 786476, 65537, 1, 852012, 65537, 1, 917548, 65537, 1, 720941, 65537, 1, 786477, 65537, 1, 852013, 65537, 1, 917549, 65537, 1, 720942, 65537, 1, 786478, 65537, 1, 852014, 65537, 1, 917550, 65537, 1, 720896, 65537, 1, 786432, 65537, 1, 851968, 65537, 1, 917504, 65537, 1, 720943, 65537, 1, 786479, 65537, 1, 852015, 65537, 1, 917551, 65537, 1, 720895, 393217, 13, 655408, 327681, 13, 65534, 65537, 1, 131070, 65537, 1, 196606, 65537, 1, 262142, 65537, 1, 327678, 65537, 1, 393214, 65537, 1, 458750, 65537, 1, 524286, 65537, 1, 589822, 65537, 1, 655358, 65537, 1, 720894, 65537, 1, 786430, 65537, 1, 851966, 65537, 1, 917502, 65537, 1, 983038, 65537, 1, 786431, 65537, 1, 851967, 65537, 1, 917503, 65537, 1, 983039, 65537, 1, 49, 65537, 1, 65585, 65537, 1, 131121, 65537, 1, 196657, 65537, 1, 262193, 65537, 1, 327729, 65537, 1, 393265, 65537, 1, 458801, 65537, 1, 524337, 65537, 1, 589873, 65537, 1, 655409, 65537, 1, 720945, 65537, 1, 786481, 65537, 1, 852017, 65537, 1, 917553, 65537, 1, 720944, 65537, 1, 786480, 65537, 1, 852016, 65537, 1, 917552, 65537, 1, 458769, 327681, 3, 458770, 458753, 3, 327701, 1, 0, 327704, 196609, 0, 393237, 1, 3, 393240, 196609, 3, 393238, 65537, 3, 393239, 65537, 3, 327702, 65537, 0, 327703, 65537, 0)

[node name="ParallaxBackground" parent="DeathWorld" instance=ExtResource("5_87ja3")]
visible = false
offset = Vector2(432, 0)
transform = Transform2D(1, 0, 0, 1, 432, 0)

[node name="DeathWorldBackground" parent="DeathWorld" instance=ExtResource("7_ts7l6")]
visible = false
offset = Vector2(432, 30)
transform = Transform2D(1, 0, 0, 1, 432, 30)

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="HP" type="Label" parent="UI"]
visible = false
offset_left = 23.0
offset_top = 19.0
offset_right = 78.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.882353, 0.882353, 0.882353, 1)
theme_override_font_sizes/font_size = 18
text = "HP: 10"
script = SubResource("GDScript_e70ww")

[node name="Courage" type="Label" parent="UI"]
visible = false
offset_left = 23.0
offset_top = 48.0
offset_right = 84.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Courage: 0"
script = SubResource("GDScript_ciooa")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.289063
anchor_bottom = 0.0802469
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="HealthBar" type="TextureProgressBar" parent="UI/VBoxContainer"]
layout_mode = 2
max_value = 10.0
value = 10.0
texture_under = ExtResource("7_wofer")
texture_over = ExtResource("7_2tid5")
texture_progress = ExtResource("8_hd7s3")
script = ExtResource("6_u0wo8")
metadata/_edit_use_anchors_ = true

[node name="CourageBar" type="TextureProgressBar" parent="UI/VBoxContainer"]
layout_mode = 2
value = 10.0
texture_under = ExtResource("10_njy5m")
texture_over = ExtResource("11_u4uyq")
texture_progress = ExtResource("12_iphf5")
script = ExtResource("13_mlp2c")
metadata/_edit_use_anchors_ = true

[node name="Collectables" type="Node2D" parent="."]
script = SubResource("GDScript_wl81y")

[node name="Timer" type="Timer" parent="Collectables"]
autostart = true

[node name="Visual Effects" type="CanvasLayer" parent="."]

[node name="Filter" type="ColorRect" parent="Visual Effects"]
material = SubResource("ShaderMaterial_tan7j")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("14_nbkpm")

[node name="Vignette" type="ColorRect" parent="Visual Effects"]
material = SubResource("ShaderMaterial_x6gj1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
script = ExtResource("17_vdpjq")

[node name="OtherWorld" type="ColorRect" parent="Visual Effects"]
visible = false
material = SubResource("ShaderMaterial_xti46")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Sprite2D" type="Sprite2D" parent="Visual Effects"]
visible = false
material = SubResource("ShaderMaterial_6wipb")
position = Vector2(576, 324)
texture = SubResource("GradientTexture2D_8hhqn")

[connection signal="timeout" from="Collectables/Timer" to="Collectables" method="_on_timer_timeout"]
